[package]
name = "b64url"
version = "0.1.0"
description = "Command line URL-safe Base-64 encoder/decoder"
authors = ["Kenneth Wang Pedersen <kenneth@wangpedersen.com>"]
edition = "2018"
repository = "https://github.com/kennep/b64url/"
license-file = "LICENSE"
categories = ["command-line-utilities"]

[dependencies]
structopt = "0.3.13"
base64 = "0.13.0"
